--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,5 +51,5 @@ extra:
       link: https://github.com/marianadeem755
       name: GitHub
     - icon: fontawesome/brands/linkedin
-      link: https://www.linkedin.com/in/marianadeem755
+      link: https://www.linkedin.com/in/maria-nadeem-4994122aa/
       name: LinkedIn
